--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div>
                 <div class="icon-container2">
                     <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="svg3"
-                        onclick="window.location.href = './HuntingStats378'">
+                        onclick="window.location.href = '../HuntingStats378'">
                         <g>
                             <path
                                 d="M12.7,12l6.6,6.6l-0.7,0.7L12,12.7l-6.6,6.6l-0.7-0.7l6.6-6.6L4.6,5.4l0.7-0.7l6.6,6.6l6.6-6.6l0.7,0.7L12.7,12z">
